--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "babel-starter-kit",
+  "name": "immutable-di-starter-kit",
   "version": "0.0.1",
   "description": "Simple babel starter kit",
   "publishConfig": {
