--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "babel-loader": "^5.3.2",
     "babel-plugin-espower": "^1.0.0",
     "css-loader": "^0.16.0",
+    "enhanced-require": "^0.4.2",
     "eslint": "^1.2.1",
     "eslint-config-airbnb": "0.0.8",
     "eslint-config-airplus": "^1.0.4",
@@ -62,12 +63,15 @@
     "minimist": "^1.2.0",
     "mocha": "^2.2.5",
     "npm-check-updates": "^2.2.0",
+    "object-assign": "^4.0.1",
     "power-assert": "^1.0.0",
     "proxyquire": "^1.7.1",
     "react-hot-loader": "^1.2.9",
     "sinon": "^1.16.1",
     "style-loader": "^0.12.3",
     "stylus-loader": "^1.2.1",
+    "unexpected": "^9.6.0",
+    "unexpected-react-shallow": "^0.2.0",
     "webpack": "^1.12.0",
     "webpack-dev-server": "^1.10.1"
   }
