--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "babel-eslint": "^4.1.0",
     "babel-loader": "^5.3.2",
     "babel-plugin-espower": "^1.0.0",
+    "babel-plugin-module-alias": "^0.1.2",
     "css-loader": "^0.16.0",
     "enhanced-require": "^0.4.2",
     "eslint": "^1.2.1",
@@ -59,6 +60,7 @@
     "eslint-plugin-react": "^3.3.0",
     "glob": "^5.0.14",
     "html-webpack-plugin": "^1.6.1",
+    "import-glob-loader": "^1.1.0",
     "json-loader": "^0.5.2",
     "minimist": "^1.2.0",
     "mocha": "^2.2.5",
