define plugin changed to babel-plugin-defines

--- a/.babelrc
+++ b/.babelrc
@@ -6,16 +6,26 @@
         "utility.inlineEnvironmentVariables"
     ],
     "plugins": [
-        "babel-plugin-module-alias"
+        "babel-plugin-module-alias",
+        "babel-plugin-defines"
     ],
     "env": {
         "development": {
             "plugins": [
                 "babel-plugin-espower"
-            ]
+            ],
+            "extra": {
+                "defines": {
+                    "DEBUG": "app:*"
+                }
+            }
         }
     },
     "extra": {
+        "defines": {
+            "BROWSER": true,
+            "DEBUG": ""
+        },
         "module-alias": [
             {
                 "src": "./src",
