--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "babel-core": "^5.8.22",
     "babel-eslint": "^4.1.0",
     "babel-loader": "^5.3.2",
+    "babel-plugin-defines": "^1.0.1",
     "babel-plugin-espower": "^1.0.0",
     "babel-plugin-module-alias": "^0.1.2",
     "css-loader": "^0.16.0",
